[package]
name = "natlb"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
anyhow = "1.0.41"
env_logger = "0.8.4"
futures = "0.3.15"
igd = {features = ["aio"], version = "0.12.0"}
k8s-openapi = {features = ["v1_21"], version = "0.12.0"}
kube = {default-features = false, features = ["rustls-tls", "client"], version = "0.58.0"}
kube-runtime = "0.58.0"
log = "0.4.14"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.26"
