[package]
name = "natlb"
version = "0.1.1"
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
anyhow = "1.0.41"
env_logger = "0.10.1"
futures = "0.3.15"
igd = { features = ["aio"], version = "0.12.0" }
k8s-openapi = { features = ["v1_28"], version = "0.20.0" }
kube = { default-features = false, features = [
    "rustls-tls",
    "client",
    "runtime",
], version = "0.87.1" }
log = "0.4.14"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.26"
